[tool.poetry]
name = "konomi"
version = "0.1.0"
description = ""
authors = ["undermakingbook <letusbookmake@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
regex = "^2020.11.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
